[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "langchain>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.3",
    "langchain-pinecone>=0.2.13",
    "langchain-text-splitters>=1.0.0",
    "pymupdf>=1.26.6",
    "python-dotenv>=1.2.1",
    "tqdm>=4.67.1",
]
