[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "ipykernel>=7.1.0",
    "langchain>=1.0.7",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.3",
    "langchain-pinecone>=0.2.13",
    "langchain-text-splitters>=1.0.0",
    "pip>=25.3",
    "pymupdf>=1.26.6",
    "python-dotenv>=1.2.1",
    "spacy>=3.8.11",
    "streamlit>=1.51.0",
    "textblob>=0.19.0",
    "tqdm>=4.67.1",
]
